--- a/fractal/src/components/sections/invest-now/invest-now.scss
+++ b/fractal/src/components/sections/invest-now/invest-now.scss
@@ -11,7 +11,7 @@
 		text-align: center;
 	}
 	
-	&__text {
+	&__text, p {
 		margin-bottom: 30px;
 		text-align: center;
 	}
